# youtube-video-chatbot

./: README.md  main.py  pyproject.toml  rag_pipeline.py
utils/: transcript_extractor.py
