[project]
name = "youtube-video-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.1",
    "youtube-transcript-api>=1.2.4",
]
